[ENHANCEMENT]Add Application CRUD and File Upload Feature
